# jetson-voice-trigger

./: .gitignore  README.md  pyproject.toml  requirements.txt  self_test.py
scripts/: install_orin.sh
src/voice_trigger/: app.py  asr.py  audio.py  config.py  matcher.py  udp_io.py  utils.py  vad.py
