[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jetson-voice-trigger"
version = "0.1.0"
description = "Offline VAD + faster-whisper trigger runner for Jetson Orin (CUDA) with CPU fallback"
requires-python = ">=3.10"
dependencies = ["numpy", "sounddevice", "webrtcvad", "rapidfuzz", "faster-whisper"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["voice_trigger"]
